--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@date-fns/tz": "^1.2.0",
     "@pinia/nuxt": "^0.9.0",
     "@vite-pwa/nuxt": "^0.10.6",
+    "@vueuse/core": "^13.7.0",
     "date-fns": "^4.1.0",
     "lucide-vue-next": "^0.471.0",
     "nuxt": "^3.15.1",
